@@ -14,22 +14,20 @@
     <parent />
 
     <artifactId>jline-graal</artifactId>
-    <name>JLine Graal Demo</name>
+    <name>JLine Native Demo</name>
 
     <properties>
         <automatic.module.name>org.jline.graal</automatic.module.name>
+        <java.release.version>22</java.release.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.jline</groupId>
-            <artifactId>jline-terminal-jni</artifactId>
+            <artifactId>jline-terminal-ffm</artifactId>
         </dependency>
         <dependency>
-            <artifactId>jline-reader</artifactId>
-        </dependency>
-        <dependency>
-            <artifactId>jline-console</artifactId>
+            <artifactId>jline-shell</artifactId>
         </dependency>
 
         <dependency>
@@ -39,11 +37,6 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm.sdk</groupId>
-            <artifactId>graal-sdk</artifactId>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -65,18 +58,21 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.graalvm.nativeimage</groupId>
-                <artifactId>native-image-maven-plugin</artifactId>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
                 <configuration>
                     <skip>${native.image.skip}</skip>
                     <imageName>graal</imageName>
                     <mainClass>org.jline.demo.graal.Graal</mainClass>
-                    <buildArgs />
+                    <buildArgs>
+                        <arg>--enable-native-access=org.jline.terminal.ffm</arg>
+                    </buildArgs>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>build-native</id>
                         <goals>
-                            <goal>native-image</goal>
+                            <goal>compile-no-fork</goal>
                         </goals>
                         <phase>package</phase>
                     </execution>
